--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -3,9 +3,9 @@ PREFIX="."
 PUBLIC_MODE='non'
 AUTO_READ_STATUS="non"
 AUTO_DOWNLOAD_STATUS="oui"
-BOT_NAME= "TKM"
-IMAGE_MENU= "https://telegra.ph/file/626e7105422c8908f723d.jpg"
-OWNER_NUM= "263775571820"
+BOT_NAME= "KING MARISEL"
+IMAGE_MENU= "https://telegra.ph/file/4d587adb6516e2a06c8a7.jpg"
+OWNER_NUM= "254740007567"
 DATABASE_URL= ""
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
